--- a/20210511_자료구조_비선형구조/00. 개념설명.md
+++ b/20210511_자료구조_비선형구조/00. 개념설명.md
@@ -41,8 +41,8 @@
   - [1-5. 파이썬 구현 예제](#1-5-파이썬-구현-예제)
 - [2. 트리](#2-트리)
   - [2-1. 개요](#2-1-개요)
-  - [2-2. 장점](#2-2-장점)
-  - [2-3. 단점](#2-3-단점)
+  - [2-2. 용어](#2-2-용어)
+  - [2-3. 트리의 필요조건](#2-3-트리의-필요조건)
   - [2-4. 종류](#2-4-종류)
     - [2-4-1. 이진트리 (Binary Tree)](#2-4-1-이진트리-binary-tree)
     - [2-4-2. 일반트리 (Non-Binary Tree)](#2-4-2-일반트리-non-binary-tree)
@@ -146,26 +146,27 @@
 
 ## 2-2. 용어
 
-![](http://www.ktword.co.kr/img_data/4726_1.JPG)
+![](http://www.ktword.co.kr/img_data/4726_1.jpg)
 
 - 기본 용어
   - 노드(Node) : 트리를 구성하는 기본 원소, 트리에서의 꼭짓점(정점, Vertex)
   - 가지(관계, Branch) : 트리에서의 변(간선, Edge, Link, Line)
-  - 루트, 리프, 가지 노드
-    - 루트 노드(뿌리 노드, Root Node, Root) : 트리에서 부모가 없는 최상위 노드
+  - 뿌리, 잎, 가지 노드
+    - 뿌리 노드(루트 노드, Root Node, Root) : 트리에서 부모가 없는 최상위 노드
       - 트리의 시작점 (트리 자료구조의 진입 노드)
-      - 예) 루트 노드 : A
-    - 리프 노드(단말 노드, Leaf Node, Terminal Node) : 트리의 맨 마지막 노드
-      - 예) 리프 노드 : F,I,J,K,L,M,N
-    - 가지 노드(Branch Node) : 트리에서 리프 노드를 제외한 나머지 노드
+      - 예) 뿌리 노드 : A
+    - 잎 노드(단말 노드, 리프 노드, Leaf Node, Terminal Node) : 트리의 맨 마지막 노드
+      - 예) 잎 노드 : F,I,J,K,L,M,N
+    - 가지 노드(Branch Node) : 트리에서 잎 노드를 제외한 나머지 노드
       - 예) 가지 노드 : A,B,C,D,E,G,H
   - 부모, 자식, 형제 노드
-    - 부모 노드(Parent Node) : 루트 노드 방향으로 직접 연결된 노드
+    - 부모 노드(Parent Node) : 뿌리 노드 방향으로 직접 연결된 노드
       - 예) 부모 노드 : (B, E) 관계에서 B
-    - 자식 노드(Child Node) : 루트 노드 반대방향으로 직접 연결된 노드
+    - 자식 노드(Child Node) : 뿌리 노드 반대방향으로 직접 연결된 노드
       - 예) 자식 노드 : (B, E) 관계에서 E
     - 형제 노드(Siblings Node) : 같은 부모 노드를 갖는 노드들
       - 예) 형제 노드 : 부모 노드 B를 기준으로 D, E, F
+
 - 관련 용어
   - 부트리(Subtree) : 큰 트리에 속하는 작은 트리
   - 차수(간선수, Degree) : 각 노드가 지닌 가지의 수
@@ -175,9 +176,9 @@
   - 경로(Path) : 한 노드에서 다른 한 노드에 이르는 길 사이에 있는 노드들의 순서
   - 길이(Length) : 출발 노드에서 도착 노드까지 거치는 노드의 개수
     - 예) E에서 G까지의 길이 : 4
-  - 깊이(Depth) : 루트에서 어떤 노드까지의 경로 길이
+  - 깊이(Depth) : 뿌리 노드에서 어떤 노드까지의 경로 길이
     - 예) D의 경로 깊이 : 2
-  - 높이(Height) : 가장 긴 루트 경로의 길이
+  - 높이(Height) : 뿌리 노드까지 가장 긴 경로의 길이
     - 예) 깊이 : 4
   - 레벨(Level) : 루트 노드(Level = 1)부터 노드까지 연결된 링크 수의 합
     - 예) A의 레벨 : 1 ; B,C의 레벨 : 2 ; D,E,F,G,H의 레벨 : 3
@@ -185,22 +186,20 @@
     - 예) 크기 : 14
   - 너비(Width) : 가장 많은 노드를 갖고 있는 레벨의 크기
 
-## 2-3. 트리 만족 조건
+## 2-3. 트리의 필요조건
 [목차로 이동](#목차)
 
 1. 모든 노드가 시작되는 특정한 뿌리 노드(root node)가 존재한다.
-2. 노드와 노드 사이의 간선이 하나만 존재한다.
+2. 노드와 노드 사이의 가지가 하나만 존재한다.
 3. 각 노드들 사이에 순환이 존재하지 않는다.
 4. 뿌리 노드를 제외한 다른 노드들도 자신을 뿌리 노드로 하는 트리여야 한다.
 
-## 2-3. 단점
-[목차로 이동](#목차)
-
 ## 2-4. 종류
-[목차로 이동](#목차)
 
 ### 2-4-1. 이진트리 (Binary Tree)
 [목차로 이동](#목차)
+
+- 각각의 노드가 최대 두 개의 자식 노드를 가지는
 
 ### 2-4-2. 일반트리 (Non-Binary Tree)
 [목차로 이동](#목차)
