--- a/20210511_자료구조_비선형구조/00-1. 자료구조_비선형구조.md
+++ b/20210511_자료구조_비선형구조/00-1. 자료구조_비선형구조.md
@@ -1,4 +1,5 @@
 # 0. 자료구조 종류 (복습)
+[목차로 이동](#목차)
 
 1. 단순구조
    1. 정수 (int)
@@ -150,7 +151,7 @@
 - 방향성이 있는 비순환 그래프의 한 종류
 - 계층적 관계(Hierarchical Relationship)을 표현하는 자료구조
 - 서로 다른 자식을 가지는 재사용되지 않는 노드들의 집합
-  - 하나의 뿌리 노드와 0개 이상의 자식 노드를 가지며 이것이 반복적으로 정의되느 자료구조
+  - 하나의 뿌리 노드와 0개 이상의 자식 노드를 가지며 이것이 반복적으로 정의되는 자료구조
 
 ![](https://w.namu.la/s/606aecc8b8a27d42129f3e13c6db9a871a4566cd88c123689585256281efb5dde5b35f4e516572f0e5f0e419f0ae2be3aedf7a9c8dbb1756d1bf635a48da67ec0be1df6d252a96f49c1893112c4068b5004973e6d233453da934c2557e5e9514cf3b576a8a4b743f3ffa0039b7e9e3b5)
 
@@ -226,12 +227,12 @@
     - 탐색하고자 하는 데이터의 지정된 부분과 비교되는 데이터
     - 모든 키들은 유일함 (노드의 값에 중복이 없음)
   - 이진 탐색 트리 (BST, Binary Search Tree) : 이진 트리 + 탐색 트리
-  - 이진 탐색 트리의 조건 
+  - 이진 탐색 트리의 조건
     2. 왼쪽 자식 노드는 부모 노드보다 작음
     3. 오른쪽 자식 노드는 부모 노드보다 큼
     4. 부트리(Subtree)도 위의 조건을 충족
   - 이진 탐색 예제
-  ![](https://w.namu.la/s/86d0064cf511a86f2b9aa24a322305c37680361cc6379c9aa5e582afae026d60e551cfe944257877ee9450316d9126dab412106160bbe2a52f94ff3c73c7c5369609c0b18bb39c2dfb54b3544eeacee87f1c8321e379b12ca713d418b55d8d4d2d6c699a7816991164e691f32bdf1d6 6)
+  ![](https://w.namu.la/s/86d0064cf511a86f2b9aa24a322305c37680361cc6379c9aa5e582afae026d60e551cfe944257877ee9450316d9126dab412106160bbe2a52f94ff3c73c7c5369609c0b18bb39c2dfb54b3544eeacee87f1c8321e379b12ca713d418b55d8d4d2d6c699a7816991164e691f32bdf1d66)
 
 ### 2-4-3. 균형 트리 (Balanced Tree)
 
@@ -258,7 +259,7 @@
   - *Balance Factor(BF) : 왼쪽 부트리(Subtree)의 높이에서 오른쪽 부트리(Subtree)의 높이를 뺀 것
     - 두 부트리(Subtree)의 높이가 같거나 잎새노드일 때의 BF : 0
     - empty tree의 BF : -1
-  
+
 ### 2-5-2. Red-Black 트리 (RB Tree)
   - AVL 트리의 단점인 삽입/삭제 시의 전체 트리 재구성을 줄이기 위해 제안된 이진 탐색 트리
   - 각 노드에 색깔을 저장하는 공간을 추가하여 색깔을 기준으로 균형을 맞추는 이진 탐색 트리
@@ -317,15 +318,15 @@ class Node:
 ```python
 # A utility function to search a given key in BST
 def search(root,key):
-     
+
     # Base Cases: root is null or key is present at root
     if root is None or root.val == key:
         return root
- 
+
     # Key is greater than root's key
     if root.val < key:
         return search(root.right,key)
-   
+
     # Key is smaller than root's key
     return search(root.left,key)
 ```
@@ -335,18 +336,18 @@ def search(root,key):
 # A utility function to insert a
 # new node with given key in BST
 def insert(node, key):
- 
+
     # If the tree is empty,
     # return a new node
     if node is None:
         return Node(key)
- 
+
     # Otherwise recur down the tree
     if key < node.key:
         node.left = insert(node.left, key)
     else:
         node.right = insert(node.right, key)
- 
+
     # return the (unchanged) node pointer
     return node
 ```
@@ -357,53 +358,53 @@ def insert(node, key):
 # and a key, this function
 # delete the key and returns the new root
 def deleteNode(root, key):
- 
+
     # Base Case
     if root is None:
         return root
- 
+
     # Recursive calls for ancestors of
     # node to be deleted
     if key < root.key:
         root.left = deleteNode(root.left, key)
         return root
- 
+
     elif(key > root.key):
         root.right = deleteNode(root.right, key)
         return root
- 
+
     # We reach here when root is the node
     # to be deleted.
-     
+
     # If root node is a leaf node
-     
+
     if root.left is None and root.right is None:
           return None
- 
+
     # If one of the children is empty
- 
+
     if root.left is None:
         temp = root.right
         root = None
         return temp
- 
+
     elif root.right is None:
         temp = root.left
         root = None
         return temp
- 
+
     # If both children exist
- 
+
     succParent = root
- 
+
     # Find Successor
- 
+
     succ = root.right
- 
+
     while succ.left != None:
         succParent = succ
         succ = succ.left
- 
+
     # Delete successor.Since successor
     # is always left child of its parent
     # we can safely make successor's right
@@ -414,11 +415,11 @@ def deleteNode(root, key):
         succParent.left = succ.right
     else:
         succParent.right = succ.right
- 
+
     # Copy Successor Data to root
- 
+
     root.key = succ.key
- 
+
     return root
 ```
 
