--- a/20210504_자료구조_선형구조/00. 개념설명.md
+++ b/20210504_자료구조_선형구조/00. 개념설명.md
@@ -1,4 +1,5 @@
 # 0. 자료구조
+[목차로 이동](#목차)
 
 ## 개요
 
@@ -18,7 +19,7 @@
    3. 문자 (chr)
 2. 선형구조 (*이번주 학습 내용* - [그림으로 이해하기](https://visualgo.net/en/list))
    1. 순차리스트 (배열(Array), 리스트(List))
-   2. 연결리스트 
+   2. 연결리스트
       1. 단순연결리스트 (Linked List; LL)
       2. 이중연결리스트 (Doubly Linked List; DLL)
       3. 원형연결리스트 (Circular Linked List; CLL)
@@ -27,7 +28,7 @@
    5. 덱 (Deque)
 3. 비선형구조
    1. 그래프
-      1. 무향 그래프 ((Undirected) Graph) 
+      1. 무향 그래프 ((Undirected) Graph)
       2. 유향 그래프 (Direct Graph, Digraph)
       3. 가중치 그래프 (Weighted Graph)
    2. 트리
@@ -132,7 +133,7 @@ print(lst[3]) # search 3
 
 # 2. 연결리스트 (Linked List; LL)
 
-## 2-1. 개요 
+## 2-1. 개요
 [목차로 이동](#목차)
 
 - 각 노드에 저장된 다음 노드의 주소에 의해 연결된 구조
@@ -146,7 +147,7 @@ print(lst[3]) # search 3
 - 삽입, 삭제 성능이 좋음 (데이터 재구성 용이)
 - 대용량 데이터 처리 적합
 
-## 2-3. 단점 
+## 2-3. 단점
 [목차로 이동](#목차)
 
 - 검색 성능이 좋지 않음 (특정 위치까지 순차적으로 순회)
@@ -204,7 +205,7 @@ class Node:
 # Linked List class
 class LinkedList:
     # Function to initialize the Linked List object
-    def __init__(self): 
+    def __init__(self):
         self.head = None
 ```
 
@@ -212,27 +213,27 @@ class LinkedList:
 
      - 선행자의 링크 필드에 저장된 주소를 삽입할 노드의 링크 필드에 저장
      - 선행자의 링크 필드에 삽입할 노드의 주소를 저장
-   
+
         => 예외 처리 : 선행자를 찾을 수 없는 경우
 
 ```python
-# This function is in LinkedList class. 
-# Inserts a new node after the given prev_node. This method is 
-# defined inside LinkedList class shown above */ 
-def insert(self, prev_node, new_data): 
-  
-    # 1. Create new node & 2. Put in the data 
+# This function is in LinkedList class.
+# Inserts a new node after the given prev_node. This method is
+# defined inside LinkedList class shown above */
+def insert(self, prev_node, new_data):
+
+    # 1. Create new node & 2. Put in the data
     new_node = Node(new_data)
-    
-    # 3. check if the given prev_node exists 
-    if prev_node is None: 
+
+    # 3. check if the given prev_node exists
+    if prev_node is None:
         new_node.next = self.head
         self.head = new_node
     else:
         # 4. Make next of new Node as next of prev_node
         new_node.next = prev_node.next
-    
-        # 5. make next of prev_node as new_node 
+
+        # 5. make next of prev_node as new_node
         prev_node.next = new_node
 ```
 
@@ -240,15 +241,15 @@ def insert(self, prev_node, new_data):
 
      - 삭제할 노드의 링크 필드에 저장된 주소를 선행자의 링크 필드에 저장
      - 삭제할 노드를 삭제한다.
-  
+
         => 예외 처리 : 삭제할 노드를 찾을 수 없는 경우
 
 ```python
-# This function is in LinkedList class. 
+# This function is in LinkedList class.
 # Given a reference to the head of a list and a key,
 # delete the first occurence of key in linked list
 def delete(self, key):
-        
+
     # Store head node
     temp = self.head
 
@@ -283,14 +284,14 @@ def delete(self, key):
   2. 노드의 링크 필드가 Null 일 때까지 탐색
   3. 노드의 데이터 필드가 검색 데이터와 동일하면 탐색 중지
   4. 해당 데이터의 노드 반환
-  
+
         => 검색한 데이터가 리스트에 존재하지 않는 경우
-        
+
         (헤드부터 검색을 하기 때문에 최악의 경우 리스트를 전부 검색해야 함)
 
 ```python
-# This function is in LinkedList class. 
-# This Function checks whether the value x present in the linked list 
+# This function is in LinkedList class.
+# This Function checks whether the value x present in the linked list
 def search(self, x):
 
     # Initialize current to head
@@ -300,9 +301,9 @@ def search(self, x):
     while current != None:
         if current.data == x:
             return True # data found
-            
+
         current = current.next
-        
+
     return False # Data Not found
 ```
 
@@ -342,9 +343,9 @@ def search(self, x):
 
 ```python
 stack = []
-stack.append(1) # 1 
-stack.append(2) # 1 - 2 
-stack.append(3) # 1 - 2 - 3 
+stack.append(1) # 1
+stack.append(2) # 1 - 2
+stack.append(3) # 1 - 2 - 3
 stack.pop()     # 1 - 2     / get 3
 stack.pop()     # 1         / get 2
 ```
@@ -385,9 +386,9 @@ stack.pop()     # 1         / get 2
 from queue import Queue
 
 q = Queue()
-q.put(1) # 1 
-q.put(2) # 1 - 2 
-q.put(3) # 1 - 2 - 3 
+q.put(1) # 1
+q.put(2) # 1 - 2
+q.put(3) # 1 - 2 - 3
 q.get()  # 2 - 3     / get 1
 q.get()  # 3         / get 2
 ```
@@ -427,8 +428,8 @@ q.get()  # 3         / get 2
 from collections import deque
 
 deq = deque()
-deq.append(1)     # 1 
-deq.append(2)     # 1 - 2 
+deq.append(1)     # 1
+deq.append(2)     # 1 - 2
 deq.appendleft(3) # 3 - 1 - 2
 deq.pop()         # 3 - 1     / get 2
 deq.popleft()     # 1         / get 3
@@ -440,7 +441,7 @@ deq.popleft()     # 1         / get 3
 
 ![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fcnu8ag%2FbtqI58Bj81q%2FxWsXOndFYkCuaS3IEBpuO1%2Fimg.png)
 
-## 99-2. 스택 vs 큐 vs 덱 
+## 99-2. 스택 vs 큐 vs 덱
 [목차로 이동](#목차)
 - 순차리스트 또는 연결리스트로 구현 (대개는 연결리스트)
 
