--- a/20210608_모델링_클래스/00. 소프트웨어공학_설계_모델링.md
+++ b/20210608_모델링_클래스/00. 소프트웨어공학_설계_모델링.md
@@ -57,9 +57,14 @@
   - [3-1. 정의](#3-1-정의)
   - [3-2. 모델링을 하는 이유](#3-2-모델링을-하는-이유)
   - [3-3. 관점과 추상화 수준에 따른 모델링](#3-3-관점과-추상화-수준에-따른-모델링)
-- [4. UML 과 클래스 다이어그램](#4-uml-과-클래스-다이어그램)
-  - [4-1. 정의](#4-1-정의)
-  - [4-2. 클래스의 표현 (with UML)](#4-2-클래스의-표현-with-uml)
+- [4. 추상화와 클래스](#4-추상화와-클래스)
+  - [4-1 정의](#4-1-정의)
+  - [4-2. 클래스의 표현](#4-2-클래스의-표현)
+  - [4-3. UML 클래스와 파이썬 구현 예시](#4-3-uml-클래스와-파이썬-구현-예시)
+- [5. UML 과 클래스 다이어그램](#5-uml-과-클래스-다이어그램)
+  - [5-1. 정의](#5-1-정의)
+  - [5-2. UML에서 제공하는 클래스들 사이의 관계](#5-2-uml에서-제공하는-클래스들-사이의-관계)
+  - [5-3. UML 클래스 다이어그램 파이썬 구현 예시](#5-3-uml-클래스-다이어그램-파이썬-구현-예시)
 
 # 1. 소프트웨어 공학
 
@@ -202,9 +207,115 @@
 
 ![](https://blog.kakaocdn.net/dn/p5E4C/btq2NFT9pUC/ZYj4vrPqXdRANNqlfeU2fK/img.png)
 
-# 4. UML 과 클래스 다이어그램
+# 4. 추상화와 클래스
 
-## 4-1. 정의
+## 4-1 정의
+[목차로 이동](#목차)
+
+- 추상화
+    - 복잡한 자료, 모듈, 시스템 등으로부터 핵심적인 개념 또는 기능을 간추려 모델을 만드는 것
+    - 예시)
+        - 메모리 공간
+            - 어떤 시점에 값을 가지며, 그곳에 다른 값을 기록하지 않는 한 다음에도 계속 그 값을 유지한다.
+        - TV
+            - 전파신호를 받아 그것을 영상으로 보여주는 전자기기
+            - 영상을 보여주고 보여주지 않는 켜고 끄는 기능이 가능하다.
+            - 채널과 볼륨을 나타내며 그것의 조정을 할 수 있다. 
+- 클래스 (class)
+    - 객체 지향 프로그래밍(OOP)에서 특정 객체를 생성하기 위해 변수와 메소드를 정의하는 일종의 틀
+    - 객체를 정의 하기 위한 상태(멤버변수)와 메서드(함수)로 구성
+        - 메서드(method) 또는 멤버 함수(member function)
+            - 객체 지향 프로그래밍에서 객체과 관련된 서브 루틴 (또는 함수)
+            - 데이터와 멤버 변수에 대한 접근 권한을 가짐
+    - 어원 : classification
+
+## 4-2. 클래스의 표현
+[목차로 이동](#목차)
+
+|클래스 명
+|---
+클래스 상태   (멤버 변수) - 객체를 정의 하기 위한 데이터 필드. 변수와 자료형을 포함
+클래스 메서드 (멤버 함수) - 생성자를 포함하여 클래스에서 생성된 인스턴스와 관련된 동작을 정의
+
+## 4-3. UML 클래스와 파이썬 구현 예시
+[목차로 이동](#목차)
+
+![](https://t1.daumcdn.net/cfile/tistory/994E0C3359832DCD04)
+
+- TV클래스 (TV.py)
+
+```python
+class TV:
+    def __init__(self):
+        self.channel  = 1 #초기 채널 1
+        self.volumeLevel = 1 # 초기 볼륨레벨 1
+        self.on = False # 초기 전원 상태 off
+ 
+    def turnOn(self):
+        self.on = True
+ 
+    def turnOff(self):
+        self.on = False
+ 
+    def getChannel(self):
+        return self.channel
+ 
+    def setChannel(self, channel):
+        if self.on and 1 <= self.channel <= 120:
+            self.channel = channel
+ 
+    def getVolumeLevel(self):
+        return self.volumeLevel
+ 
+    def setVolumeLevel(self, volumeLevel):
+        if self.on and 1 <= self.volumeLevel <= 7:
+            self.volumeLevel = volumeLevel
+ 
+    def channelUp(self):
+        if self.on and self.channel < 120 :
+            self.channel += 1
+ 
+    def channelDown(self):
+        if self.on and self.channel > 1 :
+            self.channel -= 1
+ 
+    def volumeUp(self):
+        if self.on and self.volumeLevel < 7:
+            self.volumeLevel += 1
+ 
+    def volumeDown(self):
+        if self.on and self.volumeLevel > 1:
+            self.volumeLevel -= 1
+```
+- TV 클라이언트 (TestTV.py)
+
+```python
+from TV import TV
+ 
+def main():
+    tv1 = TV()
+    tv1.turnOn()
+    tv1.setChannel(30)
+    tv1.setVolumeLevel(3)
+ 
+    tv2 = TV()
+    tv2.turnOn()
+    tv2.channelUp()
+    tv2.channelUp()
+    tv2.volumeUp()
+ 
+    print("tv1's channel is", tv1.getChannel(),
+          "and volume level is ", tv1.getVolumeLevel())
+ 
+    print("tv2's channel is", tv2.getChannel(),
+          "and volume level is ", tv2.getVolumeLevel())
+ 
+main()
+```
+
+# 5. UML 과 클래스 다이어그램
+
+## 5-1. 정의
 [목차로 이동](#목차)
 
 - 통합 모델링 언어(UML, Unified Modeling Language)
@@ -216,13 +327,113 @@
 - 클래스 다이어그램
     - 시스템을 구성하는 클래스들 사이의 관계를 표현해주는 그림 도식
 
-## 4-2. 클래스의 표현 (with UML)
+## 5-2. UML에서 제공하는 클래스들 사이의 관계
+[목차로 이동](#목차)
 
-|클래스 명
-|---
-클래스 속성 - 변수와 자료형을 포함한 데이터 필드
-클래스 책임 - 생성자, 연산(메소드, methods)을 포함
+![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbkN0Dj%2FbtqvpikwDa5%2FCbJkg0u9OjxqigkhbidSpK%2Fimg.png)
 
-- UML 클래스 예시
+- 일반화 관계(Generalization, 상속)
+    - 기반 형식과 파생 형식 사이의 관계
+    - UML 표현 : 삼각형 + 실선
+    - 예시) 피아니스트는 음악가이다
+        - '이다.'로 표현할 수 있는 형식 사이의 관계
+        - 이 때 음악가를 기반 형식이라고 말하고 피아니스트를 파생 형식이라고 부름
 
-![](https://t1.daumcdn.net/cfile/tistory/994E0C3359832DCD04)
+![](http://ehpub.co.kr/wp-content/uploads/2016/06/2.-%EC%9D%BC%EB%B0%98%ED%99%94.png)
+
+![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fc6k8gw%2Fbtqvsxz4vDv%2Fwv1KWD22FGkOSmw1ZEjtXk%2Fimg.png)
+
+
+- 실체화 관계 (Realization, 실현)
+    - 약속한 기능을 구현하는 관계
+    - 인터페이스를 사용
+    - UML 표현 : 삼각형 + 점선
+
+![](http://ehpub.co.kr/wp-content/uploads/2016/06/8.-%EC%8B%A4%ED%98%84-%EA%B4%80%EA%B3%84.png)
+
+![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbRiuzb%2FbtqvpiLAxSR%2FJhsf32B0BJiG1Z3GcIs4F0%2Fimg.png)
+
+- 의존 관계 (Dependency)
+    - 원본 개체의 변화에 따라 의존 개체도 변화하는 형식 사이의 관계
+    - UML 표현 : 화살표 + 점선
+    - 예시) 회원 정보가 바뀌면 회원 컨트롤에 표시한 정보를 변경한다.
+
+![](http://ehpub.co.kr/wp-content/uploads/2016/06/7.-%EC%9D%98%EC%A1%B4-%EA%B4%80%EA%B3%84.png)
+
+![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FzegYT%2FbtqvpASNOW9%2FgejSHuK4jXKCIFNrfnEBj0%2Fimg.png)
+
+- 연관 관계 (Association)
+    - 서로 상대를 알고 명령할 수 있는 관계
+    - 프로그램에서 위험한 관계이며 다른 안전한 관계로 바꿀 것을 권장
+    - UML 표현 : 실선
+    - 예시) 의사 - 약사
+
+![](http://ehpub.co.kr/wp-content/uploads/2016/06/6.-%EC%97%B0%EA%B4%80-%EA%B4%80%EA%B3%84.png)
+
+- 직접 연관 관계(Direct Associtaion)
+    - 명령을 내리는 형식과 이를 수행하는 형식 사이의 관계
+    - UML 표현 : 화살표 + 실선 (A가 -> B를 참조)
+    - 예시) 고용주는 노동자에게 일을 시킨다.
+
+![](http://ehpub.co.kr/wp-content/uploads/2016/06/5.-%EC%A7%81%EC%A0%91-%EC%97%B0%EA%B4%80-%EA%B4%80%EA%B3%84.png)
+
+![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FdzQZYF%2FbtqvslNpe4L%2FwngbfRWnGt7bbxFtj44kaK%2Fimg.png)
+
+- 집합 연관 관계(Aggregation, 집합)
+    - 컬렉션과 원소 사이의 관계
+    - 소유 개체와 피소유 개체가 만들어지는 과정이 별도로 진행
+    - 직접 연관과는 코드상에 차이를 구분하기가 힘듦
+    - UML 표현 : 빈 마름모 + 실선 (몸통 ◇-> 부분)
+    - 예시) 필통은 연필과 지우개 등을 가지고 있다.
+        - '가지고 있다.' 혹은 '가질 수 있다.'로 표현
+
+![](http://ehpub.co.kr/wp-content/uploads/2016/06/3.-%EC%A7%91%ED%95%A9.png)
+
+![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FNdBvF%2Fbtqvrbkqg2L%2FaKFkp2HxPvQU6xFSDYhKkK%2Fimg.png)
+
+- 복합 연관 관계(Composition, 구성, 합성)
+    - 포함 형식과 내부 형식 사이의 관계
+    - 소유 개체와 피소유 개체가 만들어지는 과정이 동시에 진행
+    - 몸체 클래스가 죽었을 경우 다른 객체도 함께 소멸
+    - UML 표현 : 찬 마름모 + 실선 (몸통 ◆-> 부분)
+    - 예시) 사람은 눈과 귀 등을 가지고 있다
+        - '가지고 있다.' 혹은 '가질 수 있다.'로 표현
+
+![](http://ehpub.co.kr/wp-content/uploads/2016/06/4.-%EA%B5%AC%EC%84%B1.png)
+
+![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbbRk9F%2FbtqvsxfMFC9%2FhMlKkz1wrpu03sy22Kek91%2Fimg.png)
+
+## 5-3. UML 클래스 다이어그램 파이썬 구현 예시
+[목차로 이동](#목차)
+
+![](https://media.geeksforgeeks.org/wp-content/uploads/class.png)
+
+```python 
+class Animal:
+    def __init__(self):
+        self.name = ''
+        self.colour = ''
+    def run():
+        print("animal is running")
+ 
+class Dog(Animal):
+    def bark():
+        print("wooh!wooh! dog is barking")
+    def run():
+        print("dog is running")
+ 
+class Cat(Animal):
+    def meww():
+        print("meww! meww!")
+
+def main():
+    d1 = Dog()
+    d1.bark()
+    d1.run()
+    c1 = Cat()
+    c1.meww()
+}
+
+if __name__ == "__main__":
+    main()
+```
